test/scc_test/decl/semantic-errors/042.a
042.t:1:23: error: invalid use of 'restrict'